initial commit [mobile optimisation]

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
       <div class="horizontal-grid-column">
         <div class="horizontal-grid-row" data-position="2">
           <h1>
-            I BUILD PROJECTS TO EXPLORE <br>
-            HOW PRODUCTS ENGAGE THEIR<br>
+            I BUILD PROJECTS TO EXPLORE 
+            HOW PRODUCTS ENGAGE THEIR
             AUDIENCES
           </h1>
         </div>
@@ -157,8 +157,8 @@
         </div>
         <div class="horizontal-grid-row-2" data-position="4">
           <h2>
-            I EXPLORE, PROTOTYPE, AND <br>
-            REVISE UNTIL THE IDEA FEELS  <br>
+            I EXPLORE, PROTOTYPE, AND 
+            REVISE UNTIL THE IDEA FEELS  
             BOTH THOUGHTFUL AND USABLE
           </h2>
         </div>
@@ -167,8 +167,8 @@
       <div class="horizontal-grid-column">
         <div class="horizontal-grid-row" data-position="5">
           <h2>
-            THESE PROJECTS REFLECT <br>
-            MY PROCESS OF LEARNING, <br>
+            THESE PROJECTS REFLECT 
+            MY PROCESS OF LEARNING, 
             DESIGNING WITH INTENTION
           </h2>
         </div>
@@ -211,10 +211,10 @@
       <div class="horizontal-grid-column">
         <div class="horizontal-grid-row" data-position="7">
           <h1>
-            I'M LOUIS PUAH, A DESIGNER<br> 
-            FOCUSED ON CRAFTING <br>
-            INTERACTIVE EXPERIENCES <br>
-            THAT FEEL INTUITIVE, <br>
+            I'M LOUIS PUAH, A DESIGNER
+            FOCUSED ON CRAFTING 
+            INTERACTIVE EXPERIENCES 
+            THAT FEEL INTUITIVE, 
             ENGAGING, AND BALANCED. 
           </h1>
         </div>
@@ -258,10 +258,10 @@
         </div>
         <div class="horizontal-grid-row-2" data-position="9">
           <h1>
-            I LEARN BY BUILDING FOCUSED <br> 
-            PROJECTS, EXPLORING GAME  <br>
-            DEVELOPMENT AND INTERACTIVE <br>
-            SYSTEMS THROUGH ITERATION AND <br>
+            I LEARN BY BUILDING FOCUSED 
+            PROJECTS, EXPLORING GAME  
+            DEVELOPMENT AND INTERACTIVE 
+            SYSTEMS THROUGH ITERATION AND 
             EXPERIMENTATION.
             
           </h1>
@@ -271,19 +271,19 @@
       <div class="horizontal-grid-column" data-position="10">
         <div class="horizontal-grid-row" data-position="10">
           <h2>
-            I ENJOY BREAKING IDEAS DOWN <br>
-            INTO SYSTEMS, EXPERIMENTING <br>
-            THROUGH ITERATION, AND <br>
-            LEARNING FROM BOTH MISTAKES <br>
+            I ENJOY BREAKING IDEAS DOWN 
+            INTO SYSTEMS, EXPERIMENTING 
+            THROUGH ITERATION, AND 
+            LEARNING FROM BOTH MISTAKES 
             AND REFINEMENTS.
           </h2>
         </div>
         <div class="horizontal-grid-row-2" data-position="10">
           <h2>
-            I'M ALSO PASSIONATE ABOUT <br>
-            PHOTOGRAPHY AND LOVE  <br> 
-            EXPLORING REAL WORLD   <br>
-            LOCATIONS TO GAIN INSPIRATION<br>
+            I'M ALSO PASSIONATE ABOUT 
+            PHOTOGRAPHY AND LOVE   
+            EXPLORING REAL WORLD   
+            LOCATIONS TO GAIN INSPIRATION
             FOR MY PROJECT WORKS
           </h2>
         </div>
