initial commit [usablities tweaks]

--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@
       <div class="horizontal-grid-spacer"></div>
       <div class="horizontal-grid-column">
         <div class="horizontal-grid-row" data-position="7">
-          <h1>
+          <h2>
             I'M LOUIS PUAH, A DESIGNER
             FOCUSED ON CRAFTING 
             INTERACTIVE EXPERIENCES 
             THAT FEEL INTUITIVE, 
             ENGAGING, AND BALANCED. 
-          </h1>
+          </h2>
         </div>
         <div class="horizontal-grid-row-2" data-position="7">
           <div class="grid-text">
@@ -257,14 +257,11 @@
           </div>
         </div>
         <div class="horizontal-grid-row-2" data-position="9">
-          <h1>
-            I LEARN BY BUILDING FOCUSED 
-            PROJECTS, EXPLORING GAME  
-            DEVELOPMENT AND INTERACTIVE 
-            SYSTEMS THROUGH ITERATION AND 
-            EXPERIMENTATION.
+          <h2>
+            I'M LEARNING THROUGH FOCUSED BUILDS, 
+            ITERATION, AND EXPERIMENTATION
             
-          </h1>
+          </h2>
         </div>
       </div>
       <div class="horizontal-grid-spacer" data-position="10"></div>
