Update: site changes

--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
       </div>
     </div>
 
-    <div class="model-container"></div>
+    <div class="model-container model-container--laptop"></div>
+    <div class="model-container model-container--gameboy"></div>
   </section>
   <section class="gallery-section" id="gallery-section" data-nav="false">
     <div id="gallery">
