Major Update [content added]

--- a/projects.html
+++ b/projects.html
@@ -18,15 +18,15 @@
     <div class="nav-inner">
       <div class="nav-left">
         <div class="nav-logo">
-          <img class="nav-logo-img" src="images/LOUIS.svg" alt="Logo" />
+          <img loading="eager" decoding="async" class="nav-logo-img" src="images/LOUIS.svg" alt="Logo" />
         </div>
       </div>
       <div class="nav-center">
-        <img class="nav-logo-img" src="images/LOGO.svg" alt="Logo" />
+        <img loading="eager" decoding="async" class="nav-logo-img" src="images/LOGO.svg" alt="Logo" />
       </div>
       <div class="nav-right">
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="nav-menu">
-          <img class="inactive" src="images/LOGO.svg" alt="Logo" />
+          <img loading="eager" decoding="async" class="inactive" src="images/LOGO.svg" alt="Logo" />
           <i class="close" aria-hidden="true">&times;</i>
         </button>
       </div>
@@ -80,7 +80,7 @@
     <section class="projects-list" data-position="1" id="tank-project">
       <div class="project-row" data-position="1">
         <div class="project-media" data-from="left">
-          <img src="images/TANK GAME_2.JPG" alt="Tank Game screenshot" />
+          <img loading="lazy" decoding="async" src="images/TANK GAME_2.JPG" alt="Tank Game screenshot" />
         </div>
         <div class="project-content">
           <p class="project-meta">2025, Game Design & Development</p>
@@ -93,7 +93,7 @@
 
       <div class="project-row reverse" data-position="2">
         <div class="project-media" data-from="right">
-          <img src="images/SNAKE GAME_1.jpg" alt="Snake Remake screenshot" />
+          <img loading="lazy" decoding="async" src="images/TANK GAME_1.png" alt="Snake Remake screenshot" />
         </div>
         <div class="project-content">
           <p class="project-meta">Tank Mechanics</p>
@@ -108,7 +108,9 @@
 
       <div class="project-row" data-position="3">
         <div class="project-media" data-from="left">
-          <img src="images/FIGHTER GAME_1.jpg" alt="Street Fighter clone screenshot" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/TANK GAME_1.png">
+            <source src="images/Videos/TANK_MOVE.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">TankMovement.cs</p>
@@ -121,7 +123,9 @@
 
       <div class="project-row reverse" data-position="4">
         <div class="project-media" data-from="right">
-          <img src="images/SUISEI_1.jpg" alt="City Skylines artwork" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/TANK GAME_1.png">
+            <source src="images/Videos/TANK_SHOOT.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">TankShooting.cs</p>
@@ -134,7 +138,9 @@
 
       <div class="project-row" data-position="5">
         <div class="project-media" data-from="left">
-          <img src="images/TM OPERA_1.jpg" alt="Opera inspired artwork" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/TANK GAME_1.png">
+            <source src="images/Videos/TANK_HEALTH.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">TankHealth.cs</p>
@@ -146,7 +152,9 @@
       </div>
       <div class="project-row reverse" data-position="6">
         <div class="project-media" data-from="right">
-          <img src="images/SUISEI_1.jpg" alt="City Skylines artwork" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/TANK GAME_1.png">
+            <source src="images/Videos/MANAGER.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">TankManager.cs, GameManager.cs</p>
@@ -159,7 +167,9 @@
 
       <div class="project-row" data-position="7">
         <div class="project-media" data-from="left">
-          <img src="images/TM OPERA_1.jpg" alt="Opera inspired artwork" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/TANK GAME_1.png">
+            <source src="images/Videos/GAME_MANAGE.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">GameManager.cs</p>
@@ -172,7 +182,7 @@
 
       <div class="project-row reverse" data-position="8">
         <div class="project-media" data-from="right">
-          <img src="images/SUISEI_1.jpg" alt="City Skylines artwork" />
+          <img loading="lazy" decoding="async" src="images/TANK_MANAGE.jpg" alt="City Skylines artwork" />
         </div>
         <div class="project-content">
           <p class="project-meta">TankManager.cs</p>
@@ -186,7 +196,9 @@
       
       <div class="project-row" data-position="9">
         <div class="project-media" data-from="left">
-          <img src="images/TM OPERA_1.jpg" alt="Opera inspired artwork" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/TANK GAME_1.png">
+            <source src="images/Videos/TANK_REFLECT.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">From mechanics to systems.</p>
@@ -204,7 +216,7 @@
     <section class="projects-list" data-position="2" id="snake-project">
       <div class="project-row" data-position="1">
         <div class="project-media" data-from="left">
-          <img src="images/SNAKE GAME_1.jpg" alt="Tank Game screenshot" />
+          <img loading="lazy" decoding="async" src="images/SNAKE GAME_1.jpg" alt="Tank Game screenshot" />
         </div>
         <div class="project-content">
           <p class="project-meta">2023, Game Design & Development</p>
@@ -218,7 +230,9 @@
 
       <div class="project-row reverse" data-position="2">
         <div class="project-media" data-from="right">
-          <img src="images/SNAKE GAME_1.jpg" alt="Snake Remake screenshot" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/SNAKE GAME_1.jpg">
+            <source src="images/Videos/SNAKE_MOVE.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">PlayerMovement.cs</p>
@@ -231,7 +245,9 @@
 
       <div class="project-row" data-position="3">
         <div class="project-media" data-from="left">
-          <img src="images/FIGHTER GAME_1.jpg" alt="Street Fighter clone screenshot" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/SNAKE GAME_1.jpg">
+            <source src="images/Videos/SNAKE_GROW.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">PlayerMovement.cs</p>
@@ -244,7 +260,9 @@
 
       <div class="project-row reverse" data-position="4">
         <div class="project-media" data-from="right">
-          <img src="images/SUISEI_1.jpg" alt="City Skylines artwork" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/SNAKE GAME_1.jpg">
+            <source src="images/Videos/SNAKE_COLLECT.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">Decoupling interaction effects from movement</p>
@@ -257,7 +275,7 @@
 
       <div class="project-row" data-position="5">
         <div class="project-media" data-from="left">
-          <img src="images/TM OPERA_1.jpg" alt="Opera inspired artwork" />
+          <img loading="lazy" decoding="async" src="images/COLLECT_CONTROL.jpg" alt="Opera inspired artwork" />
         </div>
         <div class="project-content">
           <p class="project-meta">CollectiblesController.cs</p>
@@ -268,7 +286,9 @@
       </div>
       <div class="project-row reverse" data-position="6">
         <div class="project-media" data-from="right">
-          <img src="images/SUISEI_1.jpg" alt="City Skylines artwork" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/SNAKE GAME_1.jpg">
+            <source src="images/Videos/COLLECT_MANAGE.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">FoodController.cs</p>
@@ -280,7 +300,9 @@
 
       <div class="project-row" data-position="7">
         <div class="project-media" data-from="left">
-          <img src="images/TM OPERA_1.jpg" alt="Opera inspired artwork" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/SNAKE GAME_1.jpg">
+            <source src="images/Videos/FOOD_MANAGE.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">PowerUpController.cs</p>
@@ -292,7 +314,9 @@
 
       <div class="project-row reverse" data-position="8">
         <div class="project-media" data-from="right">
-          <img src="images/SUISEI_1.jpg" alt="City Skylines artwork" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/SNAKE GAME_1.jpg">
+            <source src="images/Videos/SNAKE_FLOW.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">State-driven flow control in Unity.</p>
@@ -304,7 +328,9 @@
       
       <div class="project-row" data-position="9">
         <div class="project-media" data-from="left">
-          <img src="images/TM OPERA_1.jpg" alt="Opera inspired artwork" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/SNAKE GAME_1.jpg">
+            <source src="images/Videos/SNAKE_REFLECT.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">From mechanics to systems.</p>
@@ -320,7 +346,7 @@
     <section class="projects-list" data-position="3" id="fighter-project">
       <div class="project-row" data-position="1">
         <div class="project-media" data-from="left">
-          <img src="images/FIGHTER GAME_1.jpg" alt="Tank Game screenshot" />
+          <img loading="lazy" decoding="async" src="images/FIGHTER GAME_1.jpg" alt="Tank Game screenshot" />
         </div>
         <div class="project-content">
           <p class="project-meta">2023, Game Design & Development</p>
@@ -332,7 +358,9 @@
 
       <div class="project-row reverse" data-position="2">
         <div class="project-media" data-from="right">
-          <img src="images/SNAKE GAME_1.jpg" alt="Snake Remake screenshot" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/FIGHTER GAME_1.jpg">
+            <source src="images/Videos/STREET_ANI.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">Animation System</p>
@@ -346,7 +374,9 @@
 
       <div class="project-row" data-position="3">
         <div class="project-media" data-from="left">
-          <img src="images/FIGHTER GAME_1.jpg" alt="Street Fighter clone screenshot" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/FIGHTER GAME_1.jpg">
+            <source src="images/Videos/STREET_INPUT.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">Inputs & Combat</p>
@@ -359,7 +389,9 @@
 
       <div class="project-row reverse" data-position="4">
         <div class="project-media" data-from="right">
-          <img src="images/SUISEI_1.jpg" alt="City Skylines artwork" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/FIGHTER GAME_1.jpg">
+            <source src="images/Videos/STREET_STATE.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">Game Loop</p>
@@ -372,7 +404,9 @@
 
       <div class="project-row" data-position="5">
         <div class="project-media" data-from="left">
-          <img src="images/TM OPERA_1.jpg" alt="Opera inspired artwork" />
+          <video autoplay loop muted playsinline preload="metadata" poster="images/FIGHTER GAME_1.jpg">
+            <source src="images/Videos/STREET_REFLECT.mp4" type="video/mp4" />
+          </video>
         </div>
         <div class="project-content">
           <p class="project-meta">Lessons Learnt</p>
@@ -419,3 +453,4 @@
   <script type="module" src="script.js"></script>
 </body>
 </html>
+
