--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <div class="nav-inner">
       <div class="nav-left">
         <div class="nav-logo">
-          <img class="nav-logo-img" src="images/LOUIS.svg" alt="Logo" />
+          <img loading="eager" decoding="async" class="nav-logo-img" src="images/LOUIS.svg" alt="Logo" />
         </div>
       </div>
       <div class="nav-center">
-        <img class="nav-logo-img" src="images/LOGO.svg" alt="Logo" />
+        <img loading="eager" decoding="async" class="nav-logo-img" src="images/LOGO.svg" alt="Logo" />
       </div>
       <div class="nav-right">
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="nav-menu">
-          <img class="inactive" src="images/LOGO.svg" alt="Logo" />
+          <img loading="eager" decoding="async" class="inactive" src="images/LOGO.svg" alt="Logo" />
           <i class="close" aria-hidden="true">&times;</i>
         </button>
       </div>
@@ -68,13 +68,13 @@
             <p>
               Hi, I'm Louis, a 2024 graduate of Republic Polytechnic with a Diploma in Digital Design 
               and Development. I'm passionate about game design, where creativity meets logic. With a 
-              background in digital design, coding, and data analysis, I enjoy crafting game 
+              background in digital design, coding, photography, and data analysis, I enjoy crafting game 
               experiences that feel intuitive, engaging, and balanced
             </p>
           </div>
         </div>
         <div class="imageContainer">
-          <img class="rectMaskImage" src="images/test.jpg" alt="Intro visual" />
+          <img loading="eager" decoding="async" fetchpriority="high" class="rectMaskImage" src="images/INTRO.jpg" alt="Intro visual" />
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
           </div>
           <div class="grid-image">
             <a href="projects.html#tank-project">
-              <img src="images/TANK GAME_2.JPG" alt="test" />
+              <img loading="lazy" decoding="async" src="images/TANK GAME_2.JPG" alt="test" />
             </a>
             
           </div>
@@ -100,7 +100,7 @@
           </div>
           <div class="grid-image">
             <a href="projects.html#snake-project">
-              <img src="images/SNAKE GAME_1.jpg" alt="test" />
+              <img loading="lazy" decoding="async" src="images/SNAKE GAME_1.jpg" alt="test" />
             </a>
           </div>
         </div>
@@ -121,7 +121,7 @@
           </div>
           <div class="grid-image">
             <a href="projects.html#fighter-project">
-            <img src="images/FIGHTER GAME_1.jpg" alt="test" />
+            <img loading="lazy" decoding="async" src="images/FIGHTER GAME_1.jpg" alt="test" />
             </a>
           </div>
         </div>
@@ -133,7 +133,7 @@
             <p>CITY SKYLINES, 2025(WIP)</p>
           </div>
           <div class="grid-image">
-            <img src="images/SUISEI_1.jpg" alt="test" />
+            <img loading="lazy" decoding="async" src="images/SUISEI_1.jpg" alt="test" />
           </div>
         </div>
         <div class="horizontal-grid-row-2" data-position="3">
@@ -141,7 +141,7 @@
             <p>世紀末霸者, 2025</p>
           </div>
           <div class="grid-image">
-            <img src="images/TM OPERA_1.jpg" alt="test" />
+            <img loading="lazy" decoding="async" src="images/TM OPERA_1.jpg" alt="test" />
           </div>
         </div>
       </div>
@@ -149,10 +149,10 @@
       <div class="horizontal-grid-column">
         <div class="horizontal-grid-row" data-position="4">
           <div class="grid-text">
-            <p>WELCOME TO MY PORTFOLIO</p>
+            <p>GARDENS BY THE BAY, 2026</p>
           </div>
           <div class="grid-image">
-            <img src="images/test 2.jpg" alt="test" />
+            <img loading="lazy" decoding="async" src="images/PHOTOGRAPHY_1.jpg" alt="test" />
           </div>
         </div>
         <div class="horizontal-grid-row-2" data-position="4">
@@ -174,10 +174,10 @@
         </div>
         <div class="horizontal-grid-row-2" data-position="5">
           <div class="grid-text">
-            <p>WELCOME TO MY PORTFOLIO</p>
+            <p>BUKIT BATOK NATURE RESERVE, 2025</p>
           </div>
           <div class="grid-image">
-            <img src="images/test 2.jpg" alt="test" />
+            <img loading="lazy" decoding="async" src="images/PHOTOGRAPHY_2.jpg" alt="test" />
           </div>
           
         </div>
@@ -192,10 +192,10 @@
       <div class="horizontal-grid-column">
         <div class="horizontal-grid-row" data-position="6">
           <div class="grid-text">
-            <p>ENOSHIMA-OHASHI, 2024</p>
+            <p>REPUBLIC POLYTECHNIC, 2023</p>
           </div>
           <div class="grid-image">
-            <img src="images/BIKE_1.jpg" alt="test" />
+            <img loading="lazy" decoding="async" src="images/ABOUT_1.jpg" alt="test" />
           </div>
         </div>
         <div class="horizontal-grid-row-2" data-position="6">
@@ -203,7 +203,7 @@
             <p>OSAKA AQUARIUM KAIYUKAN, 2024</p>
           </div>
           <div class="grid-image">
-            <img src="images/AQUARIUM_1.jpg" alt="test" />
+            <img loading="lazy" decoding="async" src="images/AQUARIUM_1.jpg" alt="test" />
           </div>
         </div>
       </div>
@@ -220,10 +220,10 @@
         </div>
         <div class="horizontal-grid-row-2" data-position="7">
           <div class="grid-text">
-            <p>SINGAPORE NATIONAL GALLERY,2025</p>
+            <p>NATIONAL SERVICE, 2025</p>
           </div>
           <div class="grid-image">
-            <img src="images/COURT_1.JPG" alt="test" />
+            <img loading="lazy" decoding="async" src="images/ABOUT_2.jpg" alt="test" />
           </div>
         </div>
       </div>
@@ -231,18 +231,18 @@
       <div class="horizontal-grid-column">
         <div class="horizontal-grid-row" data-position="8">
           <div class="grid-text">
-            <p>WELCOME TO MY PORTFOLIO</p>
+            <p>ENOSHIMA-OHASHI, 2024</p>
           </div>
           <div class="grid-image">
-            <img src="images/test 2.jpg" alt="test" />
+            <img loading="lazy" decoding="async" src="images/BIKE_1.jpg" alt="test" />
           </div>
         </div>
         <div class="horizontal-grid-row-2" data-position="8">
           <div class="grid-text">
-            <p>WELCOME TO MY PORTFOLIO</p>
+            <p>FLOWER DOME, 2025</p>
           </div>
           <div class="grid-image">
-            <img src="images/test 2.jpg" alt="test" />
+            <img loading="lazy" decoding="async" src="images/PATH_1.jpg" alt="test" />
           </div>
         </div>
       </div>
@@ -250,10 +250,10 @@
       <div class="horizontal-grid-column">
         <div class="horizontal-grid-row" data-position="9">
           <div class="grid-text">
-            <p>WELCOME TO MY PORTFOLIO</p>
+            <p>SILICO BEACH, 2025</p>
           </div>
           <div class="grid-image">
-            <img src="images/test 2.jpg" alt="test" />
+            <img loading="lazy" decoding="async" src="images/BEACH_1.jpg" alt="test" />
           </div>
         </div>
         <div class="horizontal-grid-row-2" data-position="9">
@@ -312,45 +312,45 @@
   </section>
   <section class="gallery-section" id="gallery-section" data-nav="false">
     <div id="gallery">
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
-          <div class="tile">
-            <img src="images/test 2.jpg" />
-          </div>
+          <a class="tile" href="" aria-label="Open project page">
+            <img loading="lazy" decoding="async" src="images/SUISEI_1.jpg" />
+          </a>
+          <a class="tile" href="" aria-label="Open project page">
+            <img loading="lazy" decoding="async" src="images/SUKUNA_LVL.jpg" />
+          </a>
+          <a class="tile" href="projects.html#snake-project" aria-label="Open project page">
+            <img loading="lazy" decoding="async" src="images/SNAKE GAME_1.jpg" />
+          </a>
+          <a class="tile" href="" aria-label="Open project page">
+            <img loading="lazy" decoding="async" src="images/SING_BEYOND.jpg" />
+          </a>
+          <a class="tile" href="projects.html#tank-project" aria-label="Open Tank Game project">
+              <img loading="lazy" decoding="async" src="images/TANK GAME_2.JPG" />
+          </a>
+          <a class="tile" href="" aria-label="Open project page">
+            <img loading="lazy" decoding="async" src="images/TM OPERA_1.jpg" />
+          </a>
+          <a class="tile" href="projects.html#fighter-project" aria-label="Open project page">
+            <img loading="lazy" decoding="async" src="images/FIGHTER GAME_1.jpg" />
+          </a>
+          <a class="tile" href="" aria-label="Open project page">
+            <img loading="lazy" decoding="async" src="images/COURT_1.JPG" />
+          </a>
+          <a class="tile" href="" aria-label="Open project page">
+            <img loading="lazy" decoding="async" src="images/PHOTOGRAPHY_1.jpg" />
+          </a>
+          <a class="tile" href="" aria-label="Open project page">
+            <img loading="lazy" decoding="async" src="images/PHOTOGRAPHY_2.jpg" />
+          </a>
+          <a class="tile" href="" aria-label="Open project page">
+            <img loading="lazy" decoding="async" src="images/IMG-20240914-WA0049.jpg" />
+          </a>
+          <a class="tile" href="" aria-label="Open project page">
+            <img loading="lazy" decoding="async" src="images/AQUARIUM_1.jpg" />
+          </a>
+          <a class="tile" href="" aria-label="Open project page">
+            <img loading="lazy" decoding="async" src="images/BIKE_1.jpg" />
+          </a>
         </div>
   </section>
 
@@ -392,14 +392,15 @@
 <!-- #Rotating 3D Image Carousel
     <div class="banner">
         <div class="slider" style="--quantity: 8">
-            <div class="item" style="--position: 1"><img src="images/test.jpg" alt=""></div>
-            <div class="item" style="--position: 2"><img src="images/test 2.jpg" alt=""></div>
-            <div class="item" style="--position: 3"><img src="images/test 3.jpg" alt=""></div>
-            <div class="item" style="--position: 4"><img src="images/test 4.jpg" alt=""></div>
-            <div class="item" style="--position: 5"><img src="images/test.jpg" alt=""></div>
-            <div class="item" style="--position: 6"><img src="images/test 2.jpg" alt=""></div>
-            <div class="item" style="--position: 7"><img src="images/test 3.jpg" alt=""></div>
-            <div class="item" style="--position: 8"><img src="images/test 4.jpg" alt=""></div>
+            <div class="item" style="--position: 1"><img loading="lazy" decoding="async" src="images/test.jpg" alt=""></div>
+            <div class="item" style="--position: 2"><img loading="lazy" decoding="async" src="images/test 2.jpg" alt=""></div>
+            <div class="item" style="--position: 3"><img loading="lazy" decoding="async" src="images/test 3.jpg" alt=""></div>
+            <div class="item" style="--position: 4"><img loading="lazy" decoding="async" src="images/test 4.jpg" alt=""></div>
+            <div class="item" style="--position: 5"><img loading="lazy" decoding="async" src="images/test.jpg" alt=""></div>
+            <div class="item" style="--position: 6"><img loading="lazy" decoding="async" src="images/test 2.jpg" alt=""></div>
+            <div class="item" style="--position: 7"><img loading="lazy" decoding="async" src="images/test 3.jpg" alt=""></div>
+            <div class="item" style="--position: 8"><img loading="lazy" decoding="async" src="images/test 4.jpg" alt=""></div>
         </div>
     </div>
 -->
+
